--- a/src/pug/components/do/_main.pug
+++ b/src/pug/components/do/_main.pug
@@ -1,7 +1,21 @@
 // SECTION main :: START
 
 section#d-main.d-main
+  .d-main__bg
+    .d-main__bg-left
+      img(src="./img/img-dMain-left.png" srcset="./img/img-dMain-left@2x.png 2x" alt="" title="")
+
+    .d-main__bg-right
+      img(src="./img/img-dMain-right.png" srcset="./img/img-dMain-right@2x.png 2x" alt="" title="")
+
   .c-grid
     .d-main__wrapper
+
+      h1.d-main__title.c-title!= "A MEETING OF <span class='c-title--color'>MANY MINDS</span>"
+
+      p.d-main__desc.d-main__desc-0.d-main__desc--pb!= "We are an invitation-only network of the brightest minds at the forefront of science, technology and engineering."
+      p.d-main__desc.d-main__desc-1.d-main__desc--pb!= "Altogether, we constitute 1000’s of postgraduate researchers, academics and alumni. A community of talented, like-minded young scientists from world-leading universities sharing a common goal - to help industry understand how the global technology landscape is being shaped by science-driven innovation."
+      p.d-main__desc.d-main__desc-2!= "It is the diversity of our Associates’ intellect and insight that drives our success – that’s why we’re selective about who we take on board."
+
 
 // SECTION main :: END
