--- a/src/scss/_components/do/_main.scss
+++ b/src/scss/_components/do/_main.scss
@@ -1,5 +1,61 @@
 // SECTION main :: START
 
-.d-main {}
+.d-main {
+  position: relative;
+  background-color: #ffffff;
+
+  &__bg {
+    z-index: 0;
+    position: absolute;
+    display: flex;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    &-left,
+    &-right {
+      display: flex;
+      align-items: flex-end;
+      width: 50%;
+    }
+
+    &-left {
+      justify-content: flex-start;
+    }
+
+    &-right {
+      justify-content: flex-end;
+    }
+  }
+
+  .c-grid {
+    max-width: 578px;
+  }
+
+  &__wrapper {
+    z-index: 2;
+    position: relative;
+    min-height: 639px;
+    padding-top: 76px;
+    padding-bottom: 89px;
+  }
+
+  &__title {
+    padding-bottom: 18px;
+    text-align: left;
+  }
+
+  &__desc {
+    font-size: 22px;
+    font-weight: 300;
+    line-height: 1.45;
+    color: #4a4a4a;
+
+    &--pb {
+      padding-bottom: 30px;
+    }
+  }
+}
 
 // SECTION main :: END
