--- a/src/pug/components/_footer.pug
+++ b/src/pug/components/_footer.pug
@@ -23,7 +23,7 @@ footer#footer.footer
 
       .footer__wrapper-right
 
-        +nav('footer', ['Home', 'What we do', 'Who we are'])
+        +nav('footer', [{href:'/', name:'Home'},{href:'do.html', name:'What we do'},{href:'are.html',name:'Who we are'}])
 
 
 // FOOTER :: END
