--- a/src/pug/components/_header.pug
+++ b/src/pug/components/_header.pug
@@ -10,7 +10,7 @@ header#header.header
 
       .header__wrapper-middle
 
-        +nav('header', ['Home', 'What we do', 'Who we are'])
+        +nav('header', [{href:'/', name:'Home'},{href:'do.html', name:'What we do'},{href:'are.html',name:'Who we are'}])
         
       .header__wrapper-right
         a.header__btn.header__btn-pre(href="#" class="" title="")!= "pre-register"
