--- a/src/pug/components/do/_network.pug
+++ b/src/pug/components/do/_network.pug
@@ -1,7 +1,37 @@
 // SECTION network :: START
 
 section#network.network
-  .c-grid
-    .network__wrapper
+  .network__wrapper
+
+    .network__row.network__row-0
+      .network__row__bg
+
+      .c-grid
+
+        h2.network__title.c-title!= "LONDON-BASED, <span class='c-title--color'>GLOBAL NETWORK</span>"
+
+    .network__row.network__row-1
+      .c-grid
+
+        .network__block-wrapper
+          .network__block.network__block-0
+            p.network__block-count.viewport-hide-js
+              span(data-from="0" data-to="70" data-speed="1500" data-refresh-interval="50" network-num-js)!= "100"
+              != "%"
+            p.network__block-desc!= "EUROPE"
+          .network__block.network__block-1
+            p.network__block-count.viewport-hide-js
+              span(data-from="0" data-to="20" data-speed="1500" data-refresh-interval="50" network-num-js)!= "100"
+              != "%"
+            p.network__block-desc!= "ASIA"
+          .network__block.network__block-2
+            p.network__block-count.viewport-hide-js
+              span(data-from="0" data-to="10" data-speed="1500" data-refresh-interval="50" network-num-js)!= "100"
+              != "%"
+            p.network__block-desc!= "OTHER"
+          .network__block.network__block-3
+            p.network__block-count.viewport-hide-js
+              span(data-from="0" data-to="60" data-speed="1500" data-refresh-interval="50" network-num-js)!= "100"
+            p.network__block-desc!= "COUNTRIES"
 
 // SECTION network :: END
