--- a/src/pug/components/do/_community.pug
+++ b/src/pug/components/do/_community.pug
@@ -3,5 +3,27 @@
 section#community.community
   .c-grid
     .community__wrapper
+      .community__wrapper-left
+
+        h2.community__title.c-title!= "PRE-REGISTER NOW"
+
+        p.community__desc!= "Our success is founded on the diversity of our community. Associates hold a variety of nationalities and the remarkable thing about our crowdsourcing model is that you can be working on projects from anywhere in the world, at any time, all with a web connection."
+
+        a.community__btn.c-btn.c-btn--bg(href="#" class="" title="")!= "PRE-REGISTER"
+
+        p.community__info!= "Applications open <span>12/02/2019</span>"
+
+      .community__wrapper-right
+
+        .community__block
+          .community__block-top
+            p.community__block-title!= "Community Contacts"
+
+            .community__block-img
+              img(src="./img/img-community-user.png" srcset="./img/img-community-user@2x.png 2x" alt="" title="")
+
+          .community__block-bottom
+            p.community__block-name!= "James Good"
+            p.community__block-pos!= "Community Manager"
 
 // SECTION community :: END
