--- a/src/scss/_components/do/_community.scss
+++ b/src/scss/_components/do/_community.scss
@@ -4,7 +4,124 @@
   background-color: #f8f8f8;
 
   &__wrapper {
+    display: flex;
+    align-items: center;
+    padding-top: 96px;
+    padding-bottom: 155px;
     min-height: 717px;
+
+    &-left,
+    &-right {
+      width: 50%;
+    }
+  }
+
+  &__title {
+    padding-bottom: 18px;
+    text-align: left;
+  }
+
+  &__desc {
+    padding-bottom: 40px;
+    width: 100%;
+    max-width: 563px;
+    font-size: 22px;
+    font-weight: 300;
+    line-height: 1.45;
+    color: #4a4a4a;
+  }
+
+  &__btn {
+    margin-bottom: 17px;
+  }
+
+  &__info {
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: normal;
+    color: #5e5e5e;
+
+    span {
+      font-weight: 500;
+    }
+  }
+
+  &__block {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 369px;
+    min-height: 466px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #ffffff;
+    box-shadow: 0 5px 4px 0 #0000003f;
+
+    &-top,
+    &-bottom {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &-top {
+      height: 349px;
+      padding: 30px 15px 15px;
+      background-color: #333333;
+    }
+
+    &-bottom {
+      justify-content: center;
+      min-height: calc(466px - 349px);
+      padding: 10px;
+    }
+
+    &-img {
+      overflow: hidden;
+      position: relative;
+      width: 168px;
+      height: 168px;
+      margin-left: auto;
+      margin-right: auto;
+      border-radius: 100%;
+      border: 5px solid #fff;
+
+      img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+      }
+    }
+
+    &-title {
+      padding-bottom: 40px;
+      font-size: 32px;
+      font-weight: 300;
+      line-height: 1.25;
+      letter-spacing: -0.9px;
+      text-align: center;
+      color: #ffffff;
+    }
+
+    &-name {
+      font-size: 32px;
+      font-weight: bold;
+      line-height: 1.25;
+      letter-spacing: -0.7px;
+      text-align: center;
+      color: #4a4a4a;
+    }
+
+    &-pos {
+      font-size: 22px;
+      font-weight: 300;
+      line-height: 1.45;
+      text-align: center;
+      color: #4a4a4a;
+    }
   }
 }
 
