--- a/src/scss/_shared/_swiper.scss
+++ b/src/scss/_shared/_swiper.scss
@@ -155,4 +155,38 @@
       }
     }
   }
+
+  &-stand {
+    max-width: 100%;
+    height: 300px;
+
+    .swiper {
+      &-slide {
+        position: relative;
+        width: 280px;
+        height: 238px;
+        border: solid 1px #979797;
+        background-color: #d8d8d8;
+      }
+
+      &-pagination {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &-bullet {
+          opacity: 1;
+          width: 8px;
+          height: 8px;
+          margin-left: 10px;
+          margin-top: 10px;
+          background-color: #989898;
+
+          &-active {
+            background-color: #44a399;
+          }
+        }
+      }
+    }
+  }
 }
