--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -736,7 +736,7 @@ picture {
 /* line 159, src/scss/_shared/_swiper.scss */
 .swiper-container-stand {
   max-width: 100%;
-  height: 300px;
+  height: 273px;
 }
 
 /* line 164, src/scss/_shared/_swiper.scss */
@@ -1086,7 +1086,8 @@ picture {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  min-height: 100vh;
+  min-height: -webkit-calc(100vh - 51px);
+  min-height: calc(100vh - 51px);
 }
 
 /* line 44, src/scss/_components/home/_main.scss */
@@ -1183,7 +1184,8 @@ picture {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  min-height: 100vh;
+  min-height: -webkit-calc(100vh - 51px);
+  min-height: calc(100vh - 51px);
 }
 
 /* line 13, src/scss/_components/home/_flexible.scss */
@@ -1645,18 +1647,33 @@ picture {
 .d-main__wrapper {
   z-index: 2;
   position: relative;
-  min-height: 639px;
-  padding-top: 76px;
-  padding-bottom: 89px;
+  left: -8px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 107px;
+  padding-bottom: 95px;
+  min-height: -webkit-calc(100vh - 51px);
+  min-height: calc(100vh - 51px);
 }
 
-/* line 44, src/scss/_components/do/_main.scss */
+/* line 48, src/scss/_components/do/_main.scss */
 .d-main__title {
   padding-bottom: 18px;
   text-align: left;
 }
 
-/* line 49, src/scss/_components/do/_main.scss */
+/* line 53, src/scss/_components/do/_main.scss */
 .d-main__desc {
   font-size: 22px;
   font-weight: 300;
@@ -1664,9 +1681,9 @@ picture {
   color: #4a4a4a;
 }
 
-/* line 55, src/scss/_components/do/_main.scss */
+/* line 59, src/scss/_components/do/_main.scss */
 .d-main__desc--pb {
-  padding-bottom: 30px;
+  padding-bottom: 34px;
 }
 
 /* line 3, src/scss/_components/do/_stand.scss */
@@ -1685,36 +1702,45 @@ picture {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
-  min-height: 722px;
   padding-top: 50px;
-  padding-bottom: 65px;
+  padding-bottom: 60px;
+  min-height: -webkit-calc(100vh - 51px);
+  min-height: calc(100vh - 51px);
 }
 
 /* line 15, src/scss/_components/do/_stand.scss */
 .stand__row-0 {
-  min-height: 352px;
+  min-height: 303px;
 }
 
 /* line 19, src/scss/_components/do/_stand.scss */
 .stand__row-1 {
-  min-height: -webkit-calc(100% - 352px);
-  min-height: calc(100% - 352px);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: -webkit-calc((100vh - 51px) - 352px);
+  min-height: calc((100vh - 51px) - 352px);
 }
 
-/* line 24, src/scss/_components/do/_stand.scss */
+/* line 26, src/scss/_components/do/_stand.scss */
 .stand__title {
   padding-bottom: 35px;
   color: #4a4a4a;
 }
 
-/* line 29, src/scss/_components/do/_stand.scss */
+/* line 31, src/scss/_components/do/_stand.scss */
 .stand__block {
   width: 100%;
   max-width: -webkit-calc((100% - (44px * 2)) / 3);
   max-width: calc((100% - (44px * 2)) / 3);
 }
 
-/* line 33, src/scss/_components/do/_stand.scss */
+/* line 35, src/scss/_components/do/_stand.scss */
 .stand__block-wrapper {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1726,7 +1752,7 @@ picture {
           justify-content: space-between;
 }
 
-/* line 38, src/scss/_components/do/_stand.scss */
+/* line 40, src/scss/_components/do/_stand.scss */
 .stand__block-title {
   padding-bottom: 22px;
   font-size: 32px;
@@ -1736,13 +1762,13 @@ picture {
   color: #4a4a4a;
 }
 
-/* line 47, src/scss/_components/do/_stand.scss */
+/* line 49, src/scss/_components/do/_stand.scss */
 .stand__block-desc {
   font-size: 18px;
   font-weight: 300;
   font-style: normal;
   font-stretch: normal;
-  line-height: 1.33;
+  line-height: 1.37;
   letter-spacing: normal;
   color: #4a4a4a;
 }
@@ -1763,7 +1789,8 @@ picture {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
-  min-height: 719px;
+  min-height: -webkit-calc(100vh - 51px);
+  min-height: calc(100vh - 51px);
 }
 
 /* line 12, src/scss/_components/do/_network.scss */
@@ -1817,25 +1844,33 @@ picture {
 
 /* line 46, src/scss/_components/do/_network.scss */
 .network__row-1 {
-  min-height: -webkit-calc(100% - 479px);
-  min-height: calc(100% - 479px);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: -webkit-calc((100vh - 51px) - 479px);
+  min-height: calc((100vh - 51px) - 479px);
   padding-top: 48px;
   padding-bottom: 52px;
 }
 
-/* line 53, src/scss/_components/do/_network.scss */
+/* line 55, src/scss/_components/do/_network.scss */
 .network__title {
   color: #ffffff;
   text-align: left;
 }
 
-/* line 57, src/scss/_components/do/_network.scss */
+/* line 59, src/scss/_components/do/_network.scss */
 .network__title span {
   display: block;
   color: #ffffff;
 }
 
-/* line 63, src/scss/_components/do/_network.scss */
+/* line 65, src/scss/_components/do/_network.scss */
 .network__block {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1858,10 +1893,11 @@ picture {
   max-width: -webkit-calc((100% - (19px * 3)) / 4);
   max-width: calc((100% - (19px * 3)) / 4);
   min-height: 140px;
+  padding-top: 13px;
   background-color: #45b8ac;
 }
 
-/* line 73, src/scss/_components/do/_network.scss */
+/* line 76, src/scss/_components/do/_network.scss */
 .network__block-wrapper {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1873,7 +1909,7 @@ picture {
           justify-content: space-between;
 }
 
-/* line 78, src/scss/_components/do/_network.scss */
+/* line 81, src/scss/_components/do/_network.scss */
 .network__block-count {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1883,7 +1919,7 @@ picture {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-bottom: 3px;
+  padding-bottom: 6px;
   font-size: 64px;
   font-weight: 300;
   line-height: 0.75;
@@ -1891,12 +1927,12 @@ picture {
   color: #ffffff;
 }
 
-/* line 88, src/scss/_components/do/_network.scss */
+/* line 91, src/scss/_components/do/_network.scss */
 .network__block-count span {
   line-height: 0.75;
 }
 
-/* line 93, src/scss/_components/do/_network.scss */
+/* line 96, src/scss/_components/do/_network.scss */
 .network__block-desc {
   padding-top: 3px;
   font-size: 24px;
@@ -1932,15 +1968,26 @@ picture {
   width: 50%;
 }
 
-/* line 19, src/scss/_components/do/_community.scss */
+/* line 18, src/scss/_components/do/_community.scss */
+.community__wrapper-left {
+  position: relative;
+  top: -13px;
+}
+
+/* line 23, src/scss/_components/do/_community.scss */
+.community__wrapper-right {
+  padding-left: 8px;
+}
+
+/* line 28, src/scss/_components/do/_community.scss */
 .community__title {
   padding-bottom: 18px;
   text-align: left;
 }
 
-/* line 24, src/scss/_components/do/_community.scss */
+/* line 33, src/scss/_components/do/_community.scss */
 .community__desc {
-  padding-bottom: 40px;
+  padding-bottom: 43px;
   width: 100%;
   max-width: 563px;
   font-size: 22px;
@@ -1949,12 +1996,12 @@ picture {
   color: #4a4a4a;
 }
 
-/* line 34, src/scss/_components/do/_community.scss */
+/* line 43, src/scss/_components/do/_community.scss */
 .community__btn {
   margin-bottom: 17px;
 }
 
-/* line 38, src/scss/_components/do/_community.scss */
+/* line 47, src/scss/_components/do/_community.scss */
 .community__info {
   font-size: 16px;
   line-height: 1.25;
@@ -1962,12 +2009,12 @@ picture {
   color: #5e5e5e;
 }
 
-/* line 44, src/scss/_components/do/_community.scss */
+/* line 53, src/scss/_components/do/_community.scss */
 .community__info span {
   font-weight: 500;
 }
 
-/* line 49, src/scss/_components/do/_community.scss */
+/* line 58, src/scss/_components/do/_community.scss */
 .community__block {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1988,7 +2035,7 @@ picture {
           box-shadow: 0 5px 4px 0 #0000003f;
 }
 
-/* line 60, src/scss/_components/do/_community.scss */
+/* line 69, src/scss/_components/do/_community.scss */
 .community__block-top, .community__block-bottom {
   display: -webkit-box;
   display: -webkit-flex;
@@ -2001,14 +2048,14 @@ picture {
           flex-direction: column;
 }
 
-/* line 66, src/scss/_components/do/_community.scss */
+/* line 75, src/scss/_components/do/_community.scss */
 .community__block-top {
   height: 349px;
-  padding: 30px 15px 15px;
+  padding: 25px 15px 15px;
   background-color: #333333;
 }
 
-/* line 72, src/scss/_components/do/_community.scss */
+/* line 81, src/scss/_components/do/_community.scss */
 .community__block-bottom {
   -webkit-box-pack: center;
   -webkit-justify-content: center;
@@ -2016,23 +2063,23 @@ picture {
           justify-content: center;
   min-height: -webkit-calc(466px - 349px);
   min-height: calc(466px - 349px);
-  padding: 10px;
+  padding: 6px 10px 10px;
 }
 
-/* line 78, src/scss/_components/do/_community.scss */
+/* line 87, src/scss/_components/do/_community.scss */
 .community__block-img {
   overflow: hidden;
   position: relative;
-  width: 168px;
-  height: 168px;
+  width: 182px;
+  height: 182px;
   margin-left: auto;
   margin-right: auto;
   -webkit-border-radius: 100%;
           border-radius: 100%;
-  border: 5px solid #fff;
+  border: 6px solid #fff;
 }
 
-/* line 88, src/scss/_components/do/_community.scss */
+/* line 97, src/scss/_components/do/_community.scss */
 .community__block-img img {
   position: absolute;
   top: 0;
@@ -2045,9 +2092,9 @@ picture {
      object-position: center;
 }
 
-/* line 99, src/scss/_components/do/_community.scss */
+/* line 108, src/scss/_components/do/_community.scss */
 .community__block-title {
-  padding-bottom: 40px;
+  padding-bottom: 38px;
   font-size: 32px;
   font-weight: 300;
   line-height: 1.25;
@@ -2056,7 +2103,7 @@ picture {
   color: #ffffff;
 }
 
-/* line 109, src/scss/_components/do/_community.scss */
+/* line 118, src/scss/_components/do/_community.scss */
 .community__block-name {
   font-size: 32px;
   font-weight: bold;
@@ -2066,7 +2113,7 @@ picture {
   color: #4a4a4a;
 }
 
-/* line 118, src/scss/_components/do/_community.scss */
+/* line 127, src/scss/_components/do/_community.scss */
 .community__block-pos {
   font-size: 22px;
   font-weight: 300;
@@ -2086,8 +2133,8 @@ picture {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  padding-top: 84px;
-  padding-bottom: 82px;
+  padding-top: 65px;
+  padding-bottom: 80px;
   min-height: 727px;
 }
 
@@ -2101,7 +2148,7 @@ picture {
   width: 100%;
   max-width: -webkit-calc(100% - 369px);
   max-width: calc(100% - 369px);
-  padding-left: 198px;
+  padding-left: 192px;
 }
 
 /* line 23, src/scss/_components/do/_touch.scss */
@@ -2123,10 +2170,19 @@ picture {
 
 /* line 39, src/scss/_components/do/_touch.scss */
 .touch__form-field {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin-bottom: 32px;
 }
 
-/* line 42, src/scss/_components/do/_touch.scss */
+/* line 44, src/scss/_components/do/_touch.scss */
 .touch__form-field label {
   cursor: pointer;
   font-size: 16px;
@@ -2138,7 +2194,7 @@ picture {
   color: #ffffff;
 }
 
-/* line 53, src/scss/_components/do/_touch.scss */
+/* line 55, src/scss/_components/do/_touch.scss */
 .touch__form-field input,
 .touch__form-field textarea {
   outline: none;
@@ -2207,29 +2263,29 @@ picture {
   color: #ffffff;
 }
 
-/* line 77, src/scss/_components/do/_touch.scss */
+/* line 79, src/scss/_components/do/_touch.scss */
 .touch__form-field--input input {
   height: 32px;
 }
 
-/* line 83, src/scss/_components/do/_touch.scss */
+/* line 85, src/scss/_components/do/_touch.scss */
 .touch__form-field--textarea textarea {
   resize: none;
   height: 180px;
 }
 
-/* line 89, src/scss/_components/do/_touch.scss */
+/* line 91, src/scss/_components/do/_touch.scss */
 .touch__form-field--btn {
   margin-bottom: 0;
 }
 
-/* line 92, src/scss/_components/do/_touch.scss */
+/* line 94, src/scss/_components/do/_touch.scss */
 .touch__form-field--btn button {
   max-width: 122px;
   text-transform: uppercase;
 }
 
-/* line 100, src/scss/_components/do/_touch.scss */
+/* line 102, src/scss/_components/do/_touch.scss */
 .touch__block {
   display: -webkit-box;
   display: -webkit-flex;
@@ -2241,17 +2297,17 @@ picture {
           align-items: flex-start;
 }
 
-/* line 104, src/scss/_components/do/_touch.scss */
+/* line 106, src/scss/_components/do/_touch.scss */
 .touch__block-0 {
   padding-bottom: 34px;
 }
 
-/* line 108, src/scss/_components/do/_touch.scss */
+/* line 110, src/scss/_components/do/_touch.scss */
 .touch__block-left {
   width: 456px;
 }
 
-/* line 112, src/scss/_components/do/_touch.scss */
+/* line 114, src/scss/_components/do/_touch.scss */
 .touch__block-right {
   width: 100%;
   max-width: -webkit-calc(100% - 456px);
@@ -2259,7 +2315,7 @@ picture {
   padding-left: 15px;
 }
 
-/* line 117, src/scss/_components/do/_touch.scss */
+/* line 119, src/scss/_components/do/_touch.scss */
 .touch__block-right p {
   font-size: 16px;
   font-weight: 500;
@@ -2267,7 +2323,7 @@ picture {
   color: #ffffff;
 }
 
-/* line 125, src/scss/_components/do/_touch.scss */
+/* line 127, src/scss/_components/do/_touch.scss */
 .touch__block-map {
   height: 265px;
   border: solid 1px #979797;
