--- a/src/scss/_components/do/_community.scss
+++ b/src/scss/_components/do/_community.scss
@@ -14,6 +14,15 @@
     &-right {
       width: 50%;
     }
+
+    &-left {
+      position: relative;
+      top: -13px;
+    }
+
+    &-right {
+      padding-left: 8px;
+    }
   }
 
   &__title {
@@ -22,7 +31,7 @@
   }
 
   &__desc {
-    padding-bottom: 40px;
+    padding-bottom: 43px;
     width: 100%;
     max-width: 563px;
     font-size: 22px;
@@ -65,25 +74,25 @@
 
     &-top {
       height: 349px;
-      padding: 30px 15px 15px;
+      padding: 25px 15px 15px;
       background-color: #333333;
     }
 
     &-bottom {
       justify-content: center;
       min-height: calc(466px - 349px);
-      padding: 10px;
+      padding: 6px 10px 10px;
     }
 
     &-img {
       overflow: hidden;
       position: relative;
-      width: 168px;
-      height: 168px;
+      width: 182px;
+      height: 182px;
       margin-left: auto;
       margin-right: auto;
       border-radius: 100%;
-      border: 5px solid #fff;
+      border: 6px solid #fff;
 
       img {
         position: absolute;
@@ -97,7 +106,7 @@
     }
 
     &-title {
-      padding-bottom: 40px;
+      padding-bottom: 38px;
       font-size: 32px;
       font-weight: 300;
       line-height: 1.25;
