--- a/src/scss/_components/do/_stand.scss
+++ b/src/scss/_components/do/_stand.scss
@@ -6,18 +6,20 @@
   &__wrapper {
     display: flex;
     flex-direction: column;
-    min-height: 722px;
     padding-top: 50px;
-    padding-bottom: 65px;
+    padding-bottom: 60px;
+    min-height: calc(100vh - 51px);
   }
 
   &__row {
     &-0 {
-      min-height: 352px;
+      min-height: 303px;
     }
 
     &-1 {
-      min-height: calc(100% - 352px);
+      display: flex;
+      align-items: center;
+      min-height: calc((100vh - 51px) - 352px);
     }
   }
 
@@ -49,7 +51,7 @@
       font-weight: 300;
       font-style: normal;
       font-stretch: normal;
-      line-height: 1.33;
+      line-height: 1.37;
       letter-spacing: normal;
       color: #4a4a4a;
     }
