--- a/src/scss/_components/home/_flexible.scss
+++ b/src/scss/_components/home/_flexible.scss
@@ -8,7 +8,7 @@
   &__wrapper {
     position: relative;
     display: flex;
-    min-height: 100vh;
+    min-height: calc(100vh - 51px);
 
     &-left,
     &-right {
