--- a/src/scss/_components/home/_main.scss
+++ b/src/scss/_components/home/_main.scss
@@ -34,7 +34,7 @@
   &__wrapper {
     display: flex;
     align-items: center;
-    min-height: 100vh;
+    min-height: calc(100vh - 51px);
 
     &-left,
     &-right {
